[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ocrtools"]

[project]
name = "ocrtools"
description = "An ocr based pdf scraping library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Dane Mason", email = "danem.mason@gmail.com"}
]
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "dateparser >= 1.2",
    "numpy >= 1.26",
    "pandas >= 2.2.0",
    "pillow >= 10.2.0",
    "protobuf",
    "pymupdf >= 1.23.25",
    "sentencepiece >= 0.2.0",
    "spacy >= 3.7.4",
    "transformers >= 4.38.1",
    "torch >= 2.2.0",
    "tesserocr",
    "boto3 >= 1.34.47",
    "amazon-textract-caller >= 0.2.2",
    "textract-trp >= 0.1.3"
]
